

		CHANGES IN R VERSION 2.0.0


USER-VISIBLE CHANGES

    o	The stub packages from 1.9.x have been removed: the library()
	function selects the new home for their code.

    o	The default barplot() method now by default uses a
	gamma-corrected grey palette (rather than the heat color
	palette) for coloring its output when given a matrix.

    o	dir.create() now expands '~' in filenames.


NEW FEATURES

    o   'version' argument added to pdf() device.  If this is set
	to "1.4", the device will support transparent colours.

    o	Function file.edit() function added: like file.show(), but
	allows editing.

    o	edit() and fix() use the object name in the window caption on
	some platforms.

    o	The 'formula' method for boxplot() has a 'na.action' argument,
	defaulting to na.pass().  This is mainly useful if the response
	is a matrix when the previous default of na.omit() would omit
	entire rows.  (Related to PR#6846.)

	boxplot() and bxp() now obey global 'par' settings and also
	allow to specify graphical options in much detail, compatibly
	with S-PLUS (fulfilling wishlist entry PR#6832) thanks to
	contributions from Arni Magnusson.  For consistency, 'boxwex'
	is not an explicit argument anymore.

    o	The 'formula' method for pairs() has a 'na.action' argument,
	defaulting to na.pass(), rather than the value of
	getOption("na.action").

    o	The 'formula' method for mosaicplot() has a 'na.action' argument
	defaulting to na.omit.

    o	The way the comparison operators handle a list argument has
	been rationalized so a few more cases will now work -- see
	?Comparison.

    o	deparse(), dput() and dump() have a new 'control' argument to
    	control the level of detail when deparsing. dump() defaults to
    	the most detail, the others default to less.  See ?deparse
    	for the details.

    o	source() with 'echo = TRUE' uses the function source attribute
    	when displaying commands as they are parsed.
